--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -1,6 +1,6 @@
 {
   "lang": "zh",
-  "start": "开始游戏",
+  "start": "开始点🐔",
   "normal": "普通模式",
   "endless": "无尽模式",
   "practice": "练习模式",
@@ -15,12 +15,12 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
+  "eat-kano": "吃掉小坤坤🐔",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
-  "game-intro1": "从最底下的开始",
-  "game-intro2": "看你能得多少分",
+  "game-title": "吃掉小坤坤🐔",
+  "game-intro1": "从最底下点🐔",
+  "game-intro2": "看你能点多少坤",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
@@ -31,11 +31,11 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
-  "text-level-5": "人?",
+  "text-level-1": "你不行～",
+  "text-level-2": "坤坤很悲伤",
+  "text-level-3": "坤坤很开心",
+  "text-level-4": "🐔你太美",
+  "text-level-5": "🐔你实在是太美",
   "time-over": "倒计时多了",
   "rank-title": "吃掉小鹿乃-排行榜",
   "query-record": "查询记录",
